# VisionAutoResearch

./: LICENSE  README.md
rust/vision_autoresearch/: Cargo.toml
rust/vision_autoresearch/examples/: keep_or_revert.rs
rust/vision_autoresearch/src/: attempt_log.rs  engine.rs  evaluator.rs  lib.rs  metric.rs  proposer.rs  scenario.rs  timesfm_walkforward.rs
rust/vision_autoresearch/tests/: git_ratchet_smoke.rs
